Finished rounding the buttons on the document toggle
Michael caught that the left side of each button wasn't rounded. I added the CSS to fix that. Thanks, Michael.

--- a/spring-batch-docs/asciidoc/stylesheets/spring.css
+++ b/spring-batch-docs/asciidoc/stylesheets/spring.css
@@ -791,4 +791,11 @@ b.conum * { color: inherit !important; }
   -webkit-border-bottom-right-radius: 4px;
   -moz-border-radius-bottomright: 4px;
   border-bottom-right-radius: 4px;
+
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  border-top-left-radius: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  -moz-border-radius-bottomleft: 4px;
+  border-bottom-left-radius: 4px;
 }
